--- a/components/user-profile/user-profile.component.html
+++ b/components/user-profile/user-profile.component.html
@@ -28,7 +28,7 @@
 
           <div class="field">
             <button mat-fab type="submit" class="add-btn" [disabled]="!f.valid">
-              <i class="fa fa-floppy-o is-size-4" aria-hidden="true"></i>
+              <mat-icon>save</mat-icon>
             </button>
           </div>
 
@@ -61,39 +61,3 @@
     </div>
   </form>
 </div>
-<!-- <div class="">
-{{user.user_id}}<br>
-
-    <form #f="ngForm" (ngSubmit)="updateProfile(f)">
-
-      <mat-form-field>
-        <input matInput placeholder="İsim" [ngModel]="user.name" name="name" [disabled]="!edit_bio">
-      </mat-form-field>
-
-      <div class="" *ngFor="let language of languages;let i = index">
-
-        <mat-form-field class="textarea-body">
-          <textarea matInput [placeholder]="language.slug" [(ngModel)]="user.user_data.biography[language.slug]" [disabled]="!edit_bio" [name]="language.slug"></textarea>
-        </mat-form-field>
-
-      </div>
-
-      <button mat-button type="submit" [disabled]="!edit_bio">Güncelleştir</button>
-
-    </form>
-
-    <span (click)="edit_bio = !edit_bio">{{!edit_bio ? "Düzenle" : "Kapat"}}</span><br>
-
-    <input type="file" #file name="file"style="display: none" (change)="showImage('img')">
-
-    <div class="" (click)="file.click()">
-
-      <img src="{{AUTHOR_IMAGE_URL + user.user_data.profile_image}}" alt="" id="img">
-
-    </div>
-
-    {{user.name}}<br>
-    {{user.role.id}}<br>
-    {{user.role.name}}
-  </div>
-</div> -->
